<resources>
    <string name="app_name">NOW SOPT Android</string>

    <!--    activity_signin-->
    <string name="tv_SignIn_Title">Welcome to SOPT</string>
    <string name="tv_SignIn_Id">아이디</string>
    <string name="et_SignIn_Id">아이디를 입력해주세요</string>
    <string name="tv_SignIn_Pw">비밀번호</string>
    <string name="et_SignIn_Pw">비밀번호를 입력해주세요</string>
    <string name="btn_SignIn_SignIn">로그인 하기</string>
    <string name="btn_SignIn_SignUp">회원가입</string>

    <!--    SignInActivity-->
    <string name="toast_SignInActivity_ValidSignIn">로그인 되었습니다!</string>
    <string name="toast_SignInActivity_InvalidPw">비밀번호가 잘못되었습니다</string>
    <string name="toast_SignInActivity_InvalidId">아이디가 잘못되었습니다!</string>

    <!--    activity_signup-->
    <string name="tv_SignUp_Title">SIGN UP</string>
    <string name="tv_SignUp_Id">아이디</string>
    <string name="et_SignUp_Id">아이디를 입력해주세요 (6~10자)</string>
    <string name="tv_SignUp_Pw">비밀번호</string>
    <string name="et_SignUp_Pw">비밀번호를 입력해주세요 (8~12자)</string>
    <string name="tv_SignUp_Name">닉네임</string>
    <string name="et_SignUp_Name">닉네임을 입력해주세요</string>
    <string name="tv_SignUp_PhoneNumber">전화번호</string>
    <string name="et_SignUp_PhoneNumber">전화번호를 입력해주세요</string>
    <string name="btn_SignUp_SignUp">회원가입 하기</string>

    <!--    SignUpActivity-->
    <string name="toast_SignUpActivity_ValidSignUp">회원가입 성공</string>
    <string name="toast_SignUpActivity_InvalidSignUp_Blank">입력하지 않은 정보가 있습니다.</string>
    <string name="toast_SignUpActivity_InvalidSignUp">회원가입 실패</string>

    <!--    item_myprofile-->
    <string name="tv_Item_MyProfile_Name">이름</string>
    <string name="tv_Item_MyProfile_PhoneNumber">전화번호</string>
    <string name="tv_Item_MyProfile_SelfDescription">자기소개</string>

    <!--    item_friend-->
    <string name="tv_Item_Friend_Name">이름</string>
    <string name="tv_Item_Friend_PhoneNumber">전화번호</string>
    <string name="tv_Item_Friend_SelfDescription">자기소개</string>

    <!--    menu_home-->
    <string name="item_menu_home_home">홈</string>
    <string name="item_menu_home_search">검색</string>
    <string name="item_menu_home_mypage">마이페이지</string>

    <!--    fragment_search-->
    <string name="tvSearch">검색</string>

    <!--    fragment_mypage-->
    <string name="tv_MyPageFragment_Main">SOPT에 온 걸 환영해!</string>
    <string name="tv_MyPageFragment_Id">아이디</string>
    <string name="tv_MyPageFragment_Pw">비밀번호</string>
    <string name="tv_MyPageFragment_PhoneNumber">전화번호</string>
</resources>